--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": " cross-env NODE_ENV=development webpack serve --mode=development --config config/webpack.dev.js",
     "build": "webpack --mode=production --config config/webpack.prod.js",
     "lint": "eslint .",
-    "prettier": "npx prettier --write ."
+    "prettier": "npx prettier --write .",
+    "starts": "npx nodemon backend/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -23,6 +24,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.0",
@@ -32,6 +34,7 @@
     "react-refresh": "^0.9.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
+    "sqlite3": "^5.0.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
