--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,8 @@
     "import/no-named-as-default-member": "off",
     "import/named": "off",
     "import/no-extraneous-dependencies": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-param-reassign": "off",
+    "jsx-a11y/no-static-element-interactions":"off"
   }
 }
