--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy":"http://localhost:1337",
   "scripts": {
     "start": " cross-env NODE_ENV=development webpack serve --mode=development --config config/webpack.dev.js",
     "build": "webpack --mode=production --config config/webpack.prod.js",
@@ -34,6 +35,7 @@
     "react-refresh": "^0.9.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
+    "socket.io": "^4.1.2",
     "sqlite3": "^5.0.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
@@ -42,8 +44,10 @@
   },
   "dependencies": {
     "core-js": "^3.14.0",
+    "immer": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "socket.io-client": "^4.1.2"
   }
 }
