--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"http://localhost:1337",
+  "proxy": "http://localhost:1337",
   "scripts": {
     "start": " cross-env NODE_ENV=development webpack serve --mode=development --config config/webpack.dev.js",
     "build": "webpack --mode=production --config config/webpack.prod.js",
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "nodemon": "^2.0.7",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
