--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "proxy": "http://localhost:1337",
   "scripts": {
     "start": "npm run starts && cross-env NODE_ENV=development webpack serve --mode=development --config config/webpack.dev.js",
-    "build": "webpack --mode=production --config config/webpack.prod.js",
+    "build": "npm run starts && webpack --mode=production --config config/webpack.prod.js",
     "lint": "eslint .",
     "prettier": "npx prettier --write .",
     "starts": "npx nodemon backend/index.js"
